[gd_scene load_steps=6 format=3 uid="uid://cje0ll6pwd5yp"]

[ext_resource type="Texture2D" uid="uid://cp2uekj7hjkcm" path="res://assets/ui/events_ui/card_bg_02.png" id="1_211ks"]
[ext_resource type="Script" path="res://scripts/character_display.gd" id="2_400t5"]
[ext_resource type="Texture2D" uid="uid://us8lymojm1m0" path="res://assets/chars/male/male_00.png" id="3_np1w4"]
[ext_resource type="Texture2D" uid="uid://ctu2krmr78qvb" path="res://assets/ui/icons/delete_button.png" id="4_2j70a"]

[sub_resource type="LabelSettings" id="LabelSettings_r0k1a"]
font_size = 22
font_color = Color(0, 0, 0, 1)

[node name="background" type="TextureRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.0
offset_top = -71.0
offset_right = 207.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_211ks")
expand_mode = 5
script = ExtResource("2_400t5")
character_class = "Warrior"
character_portrait = 13

[node name="infos" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -20.0
offset_right = 118.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
text = "Halfai, Warrior
 Lvl : 1"
label_settings = SubResource("LabelSettings_r0k1a")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="avatar_background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -48.0
offset_right = 1028.0
offset_bottom = 1202.0
grow_vertical = 2
scale = Vector2(0.07, 0.07)
color = Color(0.509804, 0.313726, 0.160784, 1)

[node name="avatar_portrait" type="TextureRect" parent="avatar_background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -625.0
offset_right = 500.0
offset_bottom = 625.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_np1w4")

[node name="delete_button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -25.0
offset_right = 436.0
offset_bottom = 487.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("4_2j70a")
